<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/round_corners"
    tools:context=".ProductInfoFragment" >

    <TextView
        android:id="@+id/titleProductName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/productName"
        android:textColor="@color/white"
        android:paddingLeft="25sp"
        android:paddingTop="25sp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="@color/white"
        android:paddingLeft="25sp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/titlePrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/price"
        android:textColor="@color/white"
        android:paddingTop="25sp"
        android:paddingLeft="25sp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="@color/white"
        android:paddingLeft="25sp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:paddingLeft="25sp"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spinnerNumberProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:popupBackground="@color/black"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginBottom="25sp"
            android:layout_weight="1"
            android:background="@drawable/picture_cancel" />

        <Button
            android:id="@+id/buttonAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25sp"
            android:layout_marginBottom="25sp"
            android:layout_weight="1"
            android:background="@drawable/picture_add_to_basket" />
    </LinearLayout>

</LinearLayout>